Added jstest-gtk.desktop file
The .desktop file was taken straight from Ubuntu

Fixes #4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,6 +94,10 @@ install(DIRECTORY data/ DESTINATION ${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}
   PATTERN "*~" EXCLUDE)
 
 install(FILES
+  jstest-gtk.desktop
+  DESTINATION ${CMAKE_INSTALL_DATADIR}/applications)
+
+install(FILES
   ${CMAKE_CURRENT_SOURCE_DIR}/jstest-gtk.1
   DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
 
