--- a/jstest-gtk.appdata.xml.in
+++ b/jstest-gtk.appdata.xml.in
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Copyright 2020 Ingo Ruhnke <grumbel@gmail.com> -->
 <component type="desktop-application">
   <id>io.gitlab.jstest_gtk.jstest_gtk</id>
-  <name>jstest-gtk</name>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0+</project_license>
   <content_rating type="oars-1.1" />
+  <name>jstest-gtk</name>
   <summary>jstest-gtk - A graphical joystick tester</summary>
   <description>
     <p>
@@ -14,7 +15,10 @@
       calibrate your joystick.
     </p>
   </description>
+  <developer_name>Ingo Ruhnke</developer_name>
+  <update_contact>grumbel@gmail.com</update_contact>
   <url type="homepage">https://jstest-gtk.gitlab.io</url>
+  <url type="bugtracker">https://gitlab.com/jstest-gtk/jstest-gtk/issues</url>
   <screenshots>
     <screenshot type="default">https://jstest-gtk.gitlab.io/screenshot-0_1_0.png</screenshot>
   </screenshots>
